<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="33dp"
        android:text="@string/personname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="72dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginBottom="43dp"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignRight="@+id/textView6"
        android:layout_marginBottom="56dp"
        android:text="@string/web"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="31dp"
        android:text="@string/oragization"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/textView5"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_toRightOf="@+id/textView6"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/editText3"
        android:inputType="textPersonName"
        android:ems="10" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView5"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginBottom="61dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_marginBottom="21dp"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_marginBottom="21dp"
        android:layout_toLeftOf="@+id/editText4"
        android:text="@string/zip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/editText4"
        android:layout_marginLeft="41dp"
        android:inputType="textPersonName"
        android:ems="10" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/textView9"
        android:inputType="textPersonName"
        android:ems="10" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView11"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:width="50dp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/editText5"
        android:inputType="textPersonName"
        android:ems="10" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_toRightOf="@+id/editText4"
        android:onClick="onClick"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="29dp"
        android:text="@string/Organizationaddress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

</RelativeLayout>