<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/fillform"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/zip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editText1"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/autoCompleteTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toRightOf="@+id/textView9"
        android:ems="10"
     	android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignRight="@+id/textView7"
        android:ems="10"
        android:inputType="textPersonName"
        android:width="45dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="number"
        android:width="50dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="33dp"
        android:text="@string/eventname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/autoCompleteTextView1"
        android:layout_marginTop="32dp"
        android:text="@string/startdate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="36dp"
        android:text="@string/enddate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="49dp"
        android:text="@string/hrs"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/autoCompleteTextView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:width="60dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="52dp"
        android:layout_toLeftOf="@+id/textView11"
        android:text="@string/adress"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="69dp"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/autoCompleteTextView2"
        android:layout_marginTop="57dp"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/textView11"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/editText7"
        android:ems="10"
        android:inputType="date"
        android:width="100dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/editText8"
        android:ems="10"
        android:inputType="date"
        android:width="100dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/editText7"
        android:ems="10"
        android:inputType="textPersonName"
        android:width="50dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_toRightOf="@+id/autoCompleteTextView2"
        android:ems="10"
        android:inputType="number"
        android:width="50dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/addloc" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_alignLeft="@+id/textView9"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

</RelativeLayout>
